--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
-private_key_file= secrets/devops.pem
-remote_user=centos
+private_key_file= ./secret/devops.pem
+remote_user= centos
 inventory = ./hostname.yml
