--- a/group-vars/main.yml
+++ b/group-vars/main.yml
@@ -2,7 +2,7 @@
 
 var_docker_hub_login: "{{ vault_docker_hub_login }}"
 var_docker_hub_password: "{{ vault_docker_hub_password }}"
-var_my_private_key: "{{ vault_github_private_key }}"
+var_my_private_key: "{{ vault_my_private_key }}"
 
 var_repository_github: "git@github.com:AbdoulRahimBarry/battlebaot.git"
 
