--- a/role/tasks/main.yml
+++ b/role/tasks/main.yml
@@ -13,7 +13,7 @@
 # Copy private keys in target    
 - name: Copy file with owner and permissions
   copy:
-    src: "{{ var_my_private_key }}"
+    content: "{{ var_my_private_key }}"
     dest: "{{ house }}/.ssh/id_rsa"
     owner: centos
     
@@ -31,7 +31,7 @@
 - name: Build an image and push it to a private repo
   docker_image:
     build:
-      path: "{{ house }}/new_folder/battlebaot/fake-backend/"
+      path: "{{ house }}/new_folder/fake-backend/"
     name: "{{ var_docker_hub_login }}/battleboat-image"
     tag: "{{ repository_tag }}"
     push: yes
@@ -41,6 +41,10 @@
 - name: Create a network
   docker_network:
     name: network_battleboat
+
+- name: Create a volume
+  docker_volume:
+    name: data
          
 # deploy dbgame   
 # Pour le volume les données se trouver dans le container je fait une copy du container dans data
@@ -53,6 +57,12 @@
       - "data:/var/lib/mysql"
     networks:
       - name: network_battleboat
+    env:
+      MYSQL_ROOT_PASSWORD: "rootpwdgame"
+      MYSQL_DATABASE: "battleboat"
+      MYSQL_USER: "battleuser"
+      MYSQL_PASSWORD: "battlepass"
+
 
 # deploy api  
 # La page se trouve dans battleboat je fait une copy dans le repetoir du container /etc/backend/static
@@ -67,3 +77,10 @@
       - name: network_battleboat
     ports:
      - "80:3000"
+    env:
+      DATABASE_HOST: "dbgame"
+      DATABASE_PORT: "3306"
+      DATABASE_USER: "battleuser"
+      DATABASE_PASSWORD: "battlepass"
+      DATABASE_NAME: "battleboat"
+
